--- a/Pokéfarm/UserScript/Skin Organization/home.css
+++ b/Pokéfarm/UserScript/Skin Organization/home.css
@@ -23,6 +23,11 @@
 	pointer-events: auto;
 }
 
+#skinpage > div:last-of-type > #skins > ul {
+	padding-left: 20px;
+	list-style-type: none;
+}
+
 li[data-link="folder"] {
 	list-style-image: url('https://pokefarm.com/upload/Hayashi_Rin/Icons/folder.png');
 }
